# tourism_management

./: .gitignore  Cargo.toml  Readme.md  docker-compose.yaml
backend/: .env  Cargo.toml  Dockerfile  Readme.md
backend-deprecated/: .env  Cargo.toml  Readme.md
backend-deprecated/migrations/2023-09-23-072100_create_tourist_database/: down.sql  up.sql
backend-deprecated/migrations/2023-09-24-082748_create_table_zipcode/: down.sql  up.sql
backend-deprecated/migrations/2023-09-24-083133_create_table_addresses/: up.sql
backend-deprecated/migrations/2023-09-24-170745_create_table_customer/: down.sql
backend-deprecated/migrations/2023-09-24-170940_create_table_tour_bookings/: up.sql
backend-deprecated/migrations/2023-09-24-171206_create_table_tour_operator/: down.sql
backend-deprecated/migrations/2023-09-24-171657_update_table_tour_add_column_tour_manager/: down.sql
backend-deprecated/src/: main.rs  schema.rs
backend/migrations/2023-09-24-082748_create_table_zipcode/: up.sql
backend/migrations/2023-09-24-083133_create_table_addresses/: down.sql  up.sql
backend/migrations/2023-09-24-083503_create_table_tour_and_locations/: down.sql  up.sql
backend/migrations/2023-09-24-170745_create_table_customer/: up.sql
backend/migrations/2023-09-24-170940_create_table_tour_bookings/: down.sql  up.sql
backend/migrations/2023-09-24-171206_create_table_tour_operator/: up.sql
backend/src/: main.rs  schema.rs  types.rs  utils.rs
backend/src/api/: mod.rs  tour.rs  tour_operator.rs  (+1 more)
frontend/signin/: user.css  user.html
scripts/: build.sh  migrations.sh  run.sh
(+16 files in other folders)
